package lowleveldesign.parkinglot;

public class Car extends Vehicle{
    public Car(String licenseNumber) {
        super(licenseNumber, VehicleSize.MEDIUM);
    }
}
