package lowleveldesign.parkinglot;

public enum VehicleSize {
    SMALL,
    MEDIUM,
    LARGE;
}
